# nk-engine.old

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
editor/: CMakeLists.txt
editor/src/: editor.cpp
engine/: CMakeLists.txt
engine/include/: defines.h  nkpch.h  test.h
engine/include/core/: arr.h  assertion.h  bit.h  bit_mask.h  bits.h  defines.h  dy_array.h  dyarr.h  file.h  hash_map.h  macros.h  result.h  system.h
engine/include/event/: application_event.h  event.h  event_dispatcher.h  key_event.h  mouse_event.h  window_event.h
engine/include/memory/: allocator.h  defer.h  double_stack_allocator.h  heap_allocator.h  linear_allocator.h  malloc_allocator.h  memory_type.h  stack_allocator.h
engine/include/nk/: app.h  app_creator.h  clock.h  entry_point.h  input_codes.h  renderer.h  window.h
engine/include/platform/: platform.h  platform_win32.h
engine/include/system/: input.h  logging.h
engine/src/: test.cpp
engine/src/core/: bit.cpp  file.cpp
engine/src/memory/: allocator.cpp  double_stack_allocator.cpp  heap_allocator.cpp  linear_allocator.cpp  malloc_allocator.cpp  stack_allocator.cpp
engine/src/nk/: app.cpp  app_creator.cpp  clock.cpp  memory_manager.cpp  memory_manager.h  system_manager.cpp  system_manager.h  window.cpp
engine/src/platform/: platform.h  platform_win32.cpp  platform_win32.h
engine/src/renderer/: context.h  device.cpp  device.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  render_pass.cpp  render_pass.h  renderer_backend.cpp  renderer_backend.h  swapchain.cpp  swapchain.h  vulkan.h
engine/src/system/: input.cpp  logging.cpp  memory.cpp  memory.h
